-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: internal
-
Component/s: javafx
-
Environment:
fx-sandbox:metal branch
-
generic
-
os_x
This is regression of JDK-8308306.
The background seems not be not cleared correctly in animating samples.
The samples run correctly in Ensemble but fail when executed individually.
The background seems not be not cleared correctly in animating samples.
The samples run correctly in Ensemble but fail when executed individually.
- blocks
-
JDK-8271024 Implement macOS Metal Rendering Pipeline
-
- Resolved
-
- duplicates
-
JDK-8314154 RenderPerfTest - graphical objects leave traces while animating
-
- Closed
-
- relates to
-
JDK-8308306 Update to Xcode 14.3 on macOS
-
- Resolved
-