8311776: Artifacts in animating sample